--- a/pipelines-for-self-hosted-agent.yml
+++ b/pipelines-for-self-hosted-agent.yml
@@ -6,14 +6,14 @@ trigger:
 - main
 
 # TODO: Replace the agent pool name
-pool: myAgentPool
+pool: myAgentPool2
 
 variables:
   # TODO: Replace the service connection name as used in the DevOps project settings
   azureServiceConnectionId: 'mySC'
   
   # TODO: Specify the value of the existing Web App name
-  webAppName: 'mywebapp207578'
+  webAppName: 'mywebapp229259'
 
   # Environment name
   environmentName: 'flask-ml-service'
